Closed Bug 1650829 Opened 5 years ago Closed 5 years ago

Crash in [@ OOM | large | mozalloc_abort | moz_xmalloc | mozilla::gfx::DrawEventRecorderPrivate::StoreSourceSurfaceRecording]

Categories

(Core :: Graphics: Canvas2D, defect)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- disabled
firefox78 --- disabled
firefox79 --- disabled
firefox80 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

These are probably down to spurious surface sizes, which we try to allow for, but are still causing OOMs when allocating the dummy surface. I think the simplest thing is to make the allocation fallible and then create a dummy 1x1 surface when it fails.

This bug is for crash report bp-65a79573-cf29-4e98-9d16-8e75b0200706.

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:51
2 mozglue.dll moz_xmalloc memory/mozalloc/mozalloc.cpp:54
3 xul.dll mozilla::gfx::DrawEventRecorderPrivate::StoreSourceSurfaceRecording gfx/2d/DrawEventRecorder.cpp:38
4 xul.dll mozilla::gfx::EnsureSurfaceStoredRecording gfx/2d/DrawTargetRecording.cpp:47
5 xul.dll mozilla::gfx::DrawTargetRecording::OptimizeSourceSurface const gfx/2d/DrawTargetRecording.cpp:484
6 xul.dll static nsLayoutUtils::SurfaceFromElement layout/base/nsLayoutUtils.cpp:7845
7 xul.dll static nsLayoutUtils::SurfaceFromElement layout/base/nsLayoutUtils.cpp:7921
8 xul.dll mozilla::dom::CanvasRenderingContext2D::DrawImage dom/canvas/CanvasRenderingContext2D.cpp:4464
9 xul.dll mozilla::dom::CanvasRenderingContext2D_Binding::drawImage dom/bindings/CanvasRenderingContext2DBinding.cpp
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/a8ba5c9516cd When the surface is too big to create a dummy in StoreSourceSurfaceRecording just create a 1x1 dummy. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: