Bug 1650829: When the surface is too big to create a dummy in StoreSourceSurfaceRecording just create a 1x1 dummy. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D82408